src/App.css
.App {
  text-align: center;
}

*::-webkit-scrollbar {
  width: 6px;
  height: 6px;
  background-color: #F5F5F5;
}

*::-webkit-scrollbar-thumb {
  background-color: darkgrey;
  outline: 1px solid slategrey;
  border-radius: 8px;
}

*::-webkit-scrollbar-track {
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  background-color: #F5F5F5;
}

.card {
  width: 90vw;
  margin: 16px;
  height: 85vh;
}

.card-container {
  width: 50%;
}

.grid-container {
  width: 44.5vw;
}

